# service/api/doLogin.go
@@ -7,8 +7,12 @@ import (
 	"github.com/julienschmidt/httprouter"
 )
 
+// questa funzione permette il login tramite il nome, se è già presente nel db
+// allora viene ritornato l'ID dell'utente esistente, altrimenti viene creato
+// il nuovo utente e viene ritornato l'ID
 func (rt *_router) doLogin(w http.ResponseWriter, r *http.Request, _ httprouter.Params) {
 	var req User
+
 	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
 		http.Error(w, "JSON non valido", http.StatusBadRequest)
 		return
@@ -19,19 +23,37 @@ func (rt *_router) doLogin(w http.ResponseWriter, r *http.Request, _ httprouter.
 		return
 	}
 
-	// Check se utente esiste
-	_, err := rt.db.GetNameByUsername(req.Name)
-	if err != nil {
+	var err error
+	req.ID, req.Name, req.Username, err = rt.db.GetUser(req.Name)
 
+	if err != nil {
+		//crea un nuovo utente
 		if err := rt.db.AddUser(req.Name, req.Name); err != nil {
-			http.Error(w, "Errore nella creazione dell'utente", http.StatusInternalServerError)
+			http.Error(w, "Errore nell'aggiunta dell'utente", http.StatusInternalServerError)
+			return
+		}
+		req.ID, req.Name, req.Username, err = rt.db.GetUser(req.Name)
+		if err != nil {
+			http.Error(w, "Errore nella ricerca dell'utente", http.StatusInternalServerError)
+			return
+		}
+		err = rt.db.SetToken(req.ID, req.Name)
+		if err != nil {
+			http.Error(w, "Errore nella creazione del token", http.StatusInternalServerError)
 			return
 		}
 	}
 
+	var token Token
+	token.Token, err = rt.db.GetToken(req.Name)
+	if err != nil {
+		http.Error(w, "Errore nella ricerca del token", http.StatusInternalServerError)
+		return
+	}
+
 	// Restituisci "token"/ID
-	resp := loginResponse{ID: req.Name}
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusCreated)
-	_ = json.NewEncoder(w).Encode(resp)
+	_ = json.NewEncoder(w).Encode(req.Token)
+
 }
